--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### SWITCHED GENES AND ALIAS_LIST PARAMETERS\n",
+    "### ADDED NUM_CLAIMS PARAMETER\n",
     "\n",
-    "def parse(driver,alias_list,genes,target_frequency):\n",
+    "def parse(driver,alias_list,genes,target_frequency,num_claims):\n",
     "    results = []\n",
     "    count = [0]*len(alias_list)\n",
     "\n",
@@ -23,10 +23,21 @@
     "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
     "                if str(cur) in titleStr:\n",
-    "                    countTitle=(titleStr.count(\" \"+str(cur)+\" \")+titleStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    countTitle=(titleStr.count(\" \" + str(cur) + \" \")+titleStr.count(\" \" + str(cur) + \".\")+\\\n",
     "                    titleStr.count(\" \" + str(cur) + \",\")+titleStr.count(\" \" + str(cur) + \"'\")+\\\n",
     "                    titleStr.count(\" \" + str(cur) + \"/\")+titleStr.count(\"/\" + str(cur) + \" \")+\\\n",
     "                    titleStr.count(\" \" + str(cur) + \":\")+titleStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                    if countTitle!=0:\n",
+    "                        results.append(aliases[0])\n",
+    "                        count[alias_list.index(aliases)]+=countTitle\n",
+    "                        break\n",
+    "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
+    "                elif str(cur).lower() in titleStr:\n",
+    "                    lower = str(cur).lower()\n",
+    "                    countTitle=(titleStr.count(\" \" + lower + \" \")+titleStr.count(\" \" + lower + \".\")+\\\n",
+    "                    titleStr.count(\" \" + lower + \",\")+titleStr.count(\" \" + lower + \"'\")+\\\n",
+    "                    titleStr.count(\" \" + lower + \"/\")+titleStr.count(\"/\" + lower + \" \")+\\\n",
+    "                    titleStr.count(\" \" + lower + \":\")+titleStr.count(\"-\" + lower + \" \"))\n",
     "                    if countTitle!=0:\n",
     "                        results.append(aliases[0])\n",
     "                        count[alias_list.index(aliases)]+=countTitle\n",
@@ -48,25 +59,31 @@
     "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
     "                if str(cur) in abstractStr:\n",
-    "                    countAbstract = 3*(abstractStr.count(\" \"+str(cur)+\" \")+abstractStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    countAbstract = 3*(abstractStr.count(\" \" + str(cur) + \" \")+abstractStr.count(\" \" + str(cur) + \".\")+\\\n",
     "                    abstractStr.count(\" \" + str(cur) + \",\")+abstractStr.count(\" \" + str(cur) + \"'\")+\\\n",
     "                    abstractStr.count(\" \" + str(cur) + \"/\")+abstractStr.count(\"/\" + str(cur) + \" \")+\\\n",
     "                    abstractStr.count(\" \" + str(cur) + \":\")+abstractStr.count(\"-\" + str(cur) + \" \"))\n",
     "                    count[alias_list.index(aliases)]+=countAbstract\n",
     "                    #print(str(temp) + \" gene: \"+ str(y))\n",
-    "\n",
+    "                elif str(cur).lower() in abstractStr:\n",
+    "                    lower = str(cur).lower()\n",
+    "                    countAbstract = 3*(abstractStr.count(\" \" + lower + \" \")+abstractStr.count(\" \" + lower + \".\")+\\\n",
+    "                    abstractStr.count(\" \" + lower + \",\")+abstractStr.count(\" \" + lower + \"'\")+\\\n",
+    "                    abstractStr.count(\" \" + lower + \"/\")+abstractStr.count(\"/\" + lower + \" \")+\\\n",
+    "                    abstractStr.count(\" \" + lower + \":\")+abstractStr.count(\"-\" + lower + \" \"))\n",
+    "                    count[alias_list.index(aliases)]+=countAbstract\n",
     "        \n",
     "        \n",
     "    #CLAIMS\n",
     "    claimList=[]\n",
     "    \n",
     "    claims = driver.find_elements_by_class_name(\"claim-text\")\n",
-    "    num_claims = 0\n",
+    "    count_claims = 0\n",
     "    for x in claims:\n",
-    "        if num_claims>=10:\n",
+    "        if count_claims>=num_claims:\n",
     "            break\n",
     "        claimList.append(x.text+\"\\n\")\n",
-    "        num_claims+=1\n",
+    "        count_claims+=1\n",
     "        \n",
     "    #print(claimList)    \n",
     "    claimStr = \"\"\n",
@@ -79,10 +96,16 @@
     "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
     "                if str(cur) in claimStr:\n",
-    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \"+str(cur)+\" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \" + str(cur) + \" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \",\")+claimStr.count(\" \" + str(cur) + \"'\")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \"/\")+claimStr.count(\"/\" + str(cur) + \" \")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \":\")+claimStr.count(\"-\" + str(cur) + \" \")\n",
+    "                elif str(cur).lower() in claimStr:\n",
+    "                    lower = str(cur).lower()\n",
+    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \" + lower + \" \")+claimStr.count(\" \" + lower + \".\")+\\\n",
+    "                    claimStr.count(\" \" + lower + \",\")+claimStr.count(\" \" + lower + \"'\")+\\\n",
+    "                    claimStr.count(\" \" + lower + \"/\")+claimStr.count(\"/\" + lower + \" \")+\\\n",
+    "                    claimStr.count(\" \" + lower + \":\")+claimStr.count(\"-\" + lower + \" \")\n",
     "\n",
     "    \n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
@@ -155,7 +178,7 @@
     "gene = genes()\n",
     "#print(l)\n",
     "\n",
-    "list = parse(driver,l,gene,3)\n",
+    "list = parse(driver,l,gene,3,10)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
