Barebone OpenTargets and GeneCards functions

--- a/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
+++ b/OpenTargets+Aliases/OpenTargets+Aliases.ipynb
@@ -93,11 +93,12 @@
     "                        numbers = numbers + \", \" + fish.text\n",
     "                numbers = numbers[2:]\n",
     "                numbers = \" (\" + numbers + \")\"\n",
+    "            \n",
     "            #print(cat.text)\n",
     "            #print(numbers)\n",
     "            if numbers!= \"\" and numbers!=\" ()\":\n",
     "                #print(cat.text.split(numbers)[0])\n",
-    "                mrekk.append(cat.text.split(numbers)[0])\n",
+    "                mrekk.append(str(cat.text[:-len(numbers)]))\n",
     "\n",
     "\n",
     "            if \"Ensembl\" in cat.text: \n",
@@ -116,7 +117,6 @@
     "    else:\n",
     "        \n",
     "        return \"\",\"\",\"\", driver, \"\", alternatesearch, newtarget\n",
-    "    \n",
     "\n",
     "############################################################################################\n",
     "\n",
@@ -143,7 +143,7 @@
     "            opentargetslink = link\n",
     "        \n",
     "        driver.get(opentargetslink)\n",
-    "        time.sleep(5)\n",
+    "        time.sleep(2)\n",
     "\n",
     "        results = driver.find_elements_by_class_name(\"MuiTableRow-root\")\n",
     "        results.pop(0)\n",
@@ -181,7 +181,7 @@
    "source": [
     "#getopentargets test\n",
     "\n",
-    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"hoxa4\") #change input string to a gene name\n",
+    "diseaseconditions, names, genename, link1, link2, closestpossibletarget = getopentargets(\"SDR42E2\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
     "    \n",
     "print(genename + \" is also known as:\")\n",
@@ -206,7 +206,7 @@
    "source": [
     "#genecards test\n",
     "\n",
-    "ensembl,names,genename, driver, link1, alternatesearch, closestpossibletarget = genecards(\"grep1\") #change input string to a gene name\n",
+    "ensembl,names,genename, driver, link1, alternatesearch, closestpossibletarget = genecards(\"hepn1\") #change input string to a gene name\n",
     "print(closestpossibletarget)\n",
     "    \n",
     "print(genename + \" is also known as:\")\n",
@@ -222,6 +222,20 @@
     "driver.close()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
