--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "def parse(driver,alias_list,genes,target_frequency,num_claims):\n",
     "    results = []\n",
     "    count = [0]*len(alias_list)\n",
-    "\n",
+    "    common_words = [\"for\",\"can\",\"not\",\"cell\"]\n",
+    "    \n",
     "    #TITLE\n",
     "    #titleStr = driver.find_element_by_id(\"title\").text\n",
     "    titleStr = driver.title.split(\" - \")[1].strip()\n",
@@ -30,9 +31,10 @@
     "                    if countTitle!=0:\n",
     "                        results.append(aliases[0])\n",
     "                        count[alias_list.index(aliases)]+=countTitle\n",
+    "                        print(\"Found in title: \"+aliases[0]+\" \"+cur)\n",
     "                        break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "                elif str(cur).lower() in titleStr:\n",
+    "                elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countTitle=(titleStr.count(\" \" + lower + \" \")+titleStr.count(\" \" + lower + \".\")+\\\n",
     "                    titleStr.count(\" \" + lower + \",\")+titleStr.count(\" \" + lower + \"'\")+\\\n",
@@ -41,6 +43,7 @@
     "                    if countTitle!=0:\n",
     "                        results.append(aliases[0])\n",
     "                        count[alias_list.index(aliases)]+=countTitle\n",
+    "                        print(\"Found in title (lowercase): \"+aliases[0]+\" \"+cur)\n",
     "                        break\n",
     "        \n",
     "        \n",
@@ -63,15 +66,19 @@
     "                    abstractStr.count(\" \" + str(cur) + \",\")+abstractStr.count(\" \" + str(cur) + \"'\")+\\\n",
     "                    abstractStr.count(\" \" + str(cur) + \"/\")+abstractStr.count(\"/\" + str(cur) + \" \")+\\\n",
     "                    abstractStr.count(\" \" + str(cur) + \":\")+abstractStr.count(\"-\" + str(cur) + \" \"))\n",
-    "                    count[alias_list.index(aliases)]+=countAbstract\n",
+    "                    if countAbstract!=0:\n",
+    "                        count[alias_list.index(aliases)]+=countAbstract\n",
+    "                        print(\"Found in abstract: \"+aliases[0]+\" \"+cur)\n",
     "                    #print(str(temp) + \" gene: \"+ str(y))\n",
-    "                elif str(cur).lower() in abstractStr:\n",
+    "                elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countAbstract = 3*(abstractStr.count(\" \" + lower + \" \")+abstractStr.count(\" \" + lower + \".\")+\\\n",
     "                    abstractStr.count(\" \" + lower + \",\")+abstractStr.count(\" \" + lower + \"'\")+\\\n",
     "                    abstractStr.count(\" \" + lower + \"/\")+abstractStr.count(\"/\" + lower + \" \")+\\\n",
     "                    abstractStr.count(\" \" + lower + \":\")+abstractStr.count(\"-\" + lower + \" \"))\n",
-    "                    count[alias_list.index(aliases)]+=countAbstract\n",
+    "                    if countAbstract!=0:\n",
+    "                        count[alias_list.index(aliases)]+=countAbstract\n",
+    "                        print(\"Found in abstract (lowercase): \"+aliases[0]+\" \"+cur)\n",
     "        \n",
     "        \n",
     "    #CLAIMS\n",
@@ -96,16 +103,22 @@
     "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
     "                if str(cur) in claimStr:\n",
-    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \" + str(cur) + \" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    countClaim=claimStr.count(\" \" + str(cur) + \" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \",\")+claimStr.count(\" \" + str(cur) + \"'\")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \"/\")+claimStr.count(\"/\" + str(cur) + \" \")+\\\n",
     "                    claimStr.count(\" \" + str(cur) + \":\")+claimStr.count(\"-\" + str(cur) + \" \")\n",
-    "                elif str(cur).lower() in claimStr:\n",
+    "                    if countClaim!=0:\n",
+    "                        count[alias_list.index(aliases)]+=countClaim\n",
+    "                        print(\"Found in claim: \"+aliases[0]+\" \"+cur)\n",
+    "                elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
-    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \" + lower + \" \")+claimStr.count(\" \" + lower + \".\")+\\\n",
+    "                    countClaim=claimStr.count(\" \" + lower + \" \")+claimStr.count(\" \" + lower + \".\")+\\\n",
     "                    claimStr.count(\" \" + lower + \",\")+claimStr.count(\" \" + lower + \"'\")+\\\n",
     "                    claimStr.count(\" \" + lower + \"/\")+claimStr.count(\"/\" + lower + \" \")+\\\n",
     "                    claimStr.count(\" \" + lower + \":\")+claimStr.count(\"-\" + lower + \" \")\n",
+    "                    if countClaim!=0:\n",
+    "                        count[alias_list.index(aliases)]+=countClaim\n",
+    "                        print(\"Found in claim (lowercase): \"+aliases[0]+\" \"+cur)\n",
     "\n",
     "    \n",
     "    sort = sorted(zip(count, genes), reverse=True)\n",
@@ -136,29 +149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "173e397b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mtimeout\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\lib\\socket.py\u001b[0m in \u001b[0;36mcreate_connection\u001b[1;34m(address, timeout, source_address)\u001b[0m\n\u001b[0;32m    795\u001b[0m                 \u001b[0msock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource_address\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 796\u001b[1;33m             \u001b[0msock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    797\u001b[0m             \u001b[1;31m# Break explicitly a reference cycle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mtimeout\u001b[0m: timed out",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-24d8771a743b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mxlrd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFirefox\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexecutable_path\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34mr'C:\\Users\\jjohn\\Desktop\\Scraping\\geckodriver-v0.29.1-win64\\geckodriver.exe'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#make sure this exists somewhere in a local, varies from user to user, and copy the path here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"https://patents.google.com/patent/US20180010134A1/en?q=tp53&oq=tp53\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\firefox\\webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, firefox_profile, firefox_binary, timeout, capabilities, proxy, executable_path, options, service_log_path, firefox_options, service_args, desired_capabilities, log_path, keep_alive)\u001b[0m\n\u001b[0;32m    166\u001b[0m             \u001b[0mcapabilities\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_capabilities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 168\u001b[1;33m             executor = FirefoxRemoteConnection(\n\u001b[0m\u001b[0;32m    169\u001b[0m                 remote_server_addr=self.service.service_url)\n\u001b[0;32m    170\u001b[0m             RemoteWebDriver.__init__(\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\firefox\\remote_connection.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, remote_server_addr, keep_alive)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mFirefoxRemoteConnection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRemoteConnection\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mremote_server_addr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkeep_alive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0mRemoteConnection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mremote_server_addr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkeep_alive\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_commands\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"GET_CONTEXT\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'GET'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'/session/$sessionId/moz/context'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\remote\\remote_connection.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, remote_server_addr, keep_alive, resolve_ip)\u001b[0m\n\u001b[0;32m    117\u001b[0m                             '{}'.format(port, parsed_url.hostname))\n\u001b[0;32m    118\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 119\u001b[1;33m                 ip = common_utils.find_connectable_ip(parsed_url.hostname,\n\u001b[0m\u001b[0;32m    120\u001b[0m                                                       port=port)\n\u001b[0;32m    121\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mip\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\common\\utils.py\u001b[0m in \u001b[0;36mfind_connectable_ip\u001b[1;34m(host, port)\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[0mconnectable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m             \u001b[0mconnectable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mis_connectable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mport\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msockaddr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mconnectable\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mfamily\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAF_INET\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\selenium\\webdriver\\common\\utils.py\u001b[0m in \u001b[0;36mis_connectable\u001b[1;34m(port, host)\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[0msocket_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    105\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 106\u001b[1;33m         \u001b[0msocket_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_connection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    107\u001b[0m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0msocket\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\socket.py\u001b[0m in \u001b[0;36mcreate_connection\u001b[1;34m(address, timeout, source_address)\u001b[0m\n\u001b[0;32m    794\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0msource_address\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    795\u001b[0m                 \u001b[0msock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource_address\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 796\u001b[1;33m             \u001b[0msock\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    797\u001b[0m             \u001b[1;31m# Break explicitly a reference cycle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    798\u001b[0m             \u001b[0merr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found in title (lowercase): BCAR1 CAS\n",
+      "Found in title (lowercase): CSE1L CAS\n",
+      "Found in title (lowercase): CTNND1 CAS\n",
+      "Found in abstract (lowercase): SDR42E2 Putative\n",
+      "Found in claim (lowercase): CEL CELL\n",
+      "[(9, 'SDR42E2'), (8, 'CEL'), (1, 'CTNND1'), (1, 'CSE1L'), (1, 'BCAR1'), (0, 'ZZZ3')]\n",
+      "Genes found\n",
+      "BCAR1\n",
+      "CSE1L\n",
+      "CTNND1\n",
+      "SDR42E2\n",
+      "CEL\n"
      ]
     }
    ],
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "6fb999d0",
    "metadata": {},
    "outputs": [],
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "01bcf523",
    "metadata": {},
    "outputs": [],
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "abaeff21",
    "metadata": {},
    "outputs": [],
