--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "def parse(driver,alias_list,genes,target_frequency,num_claims):\n",
     "    results = []\n",
     "    count = [0]*len(alias_list)\n",
-    "    common_words = [\"for\",\"can\",\"not\",\"cell\"]\n",
+    "    common_words = [\"for\",\"can\",\"not\",\"cell\",\"large\"]\n",
     "    \n",
     "    #TITLE\n",
     "    #titleStr = driver.find_element_by_id(\"title\").text\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "173e397b",
    "metadata": {},
    "outputs": [
@@ -160,15 +160,12 @@
       "Found in title (lowercase): BCAR1 CAS\n",
       "Found in title (lowercase): CSE1L CAS\n",
       "Found in title (lowercase): CTNND1 CAS\n",
-      "Found in abstract (lowercase): SDR42E2 Putative\n",
-      "Found in claim (lowercase): CEL CELL\n",
-      "[(9, 'SDR42E2'), (8, 'CEL'), (1, 'CTNND1'), (1, 'CSE1L'), (1, 'BCAR1'), (0, 'ZZZ3')]\n",
+      "Found in claim (lowercase): TP53 P53\n",
+      "[(1, 'TP53'), (1, 'CTNND1'), (1, 'CSE1L'), (1, 'BCAR1'), (0, 'ZZZ3'), (0, 'ZZEF1')]\n",
       "Genes found\n",
       "BCAR1\n",
       "CSE1L\n",
-      "CTNND1\n",
-      "SDR42E2\n",
-      "CEL\n"
+      "CTNND1\n"
      ]
     }
    ],
@@ -188,7 +185,7 @@
     "gene = genes()\n",
     "#print(l)\n",
     "\n",
-    "list = parse(driver,l,gene,3,10)\n",
+    "list = parse(driver,l,gene,3,16)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6fb999d0",
    "metadata": {},
    "outputs": [],
@@ -224,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "01bcf523",
    "metadata": {},
    "outputs": [],
@@ -247,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "abaeff21",
    "metadata": {},
    "outputs": [],
