--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,18 @@
     "def parse(driver,alias_list,genes,target_frequency,num_claims):\n",
     "    results = []\n",
     "    count = [0]*len(alias_list)\n",
-    "    common_words = [\"for\",\"can\",\"not\",\"cell\",\"large\"]\n",
+    "    \n",
+    "    common_words = ['for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
+    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
+    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
+    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get',\\\n",
+    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just',\\\n",
+    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some',\\\n",
+    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only',\\\n",
+    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two',\\\n",
+    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want',\\\n",
+    "                    'because', 'any', 'these', 'give', 'day', 'most', 'us']\n",
     "    \n",
     "    #TITLE\n",
     "    #titleStr = driver.find_element_by_id(\"title\").text\n",
@@ -260,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c85368c",
+   "id": "f92bb52d",
    "metadata": {},
    "outputs": [],
    "source": []
