--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### ADDED NUM_CLAIMS PARAMETER\n",
+    "### METHOD THAT SEARCHES THROUGH ALL ALIASES OF EACH GENE\n",
     "\n",
     "def parse(driver,alias_list,genes,target_frequency,num_claims):\n",
+    "    if target_frequency==0:\n",
+    "        target_frequency=1\n",
     "    results = []\n",
     "    count = [0]*len(alias_list)\n",
     "    \n",
@@ -154,13 +156,14 @@
     "            break\n",
     "\n",
     "    print(print_stuff)\n",
+    "    #print(results)\n",
     "    \n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "173e397b",
    "metadata": {},
    "outputs": [
@@ -168,15 +171,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found in title (lowercase): BCAR1 CAS\n",
-      "Found in title (lowercase): CSE1L CAS\n",
-      "Found in title (lowercase): CTNND1 CAS\n",
-      "Found in claim (lowercase): TP53 P53\n",
-      "[(1, 'TP53'), (1, 'CTNND1'), (1, 'CSE1L'), (1, 'BCAR1'), (0, 'ZZZ3'), (0, 'ZZEF1')]\n",
-      "Genes found\n",
-      "BCAR1\n",
-      "CSE1L\n",
-      "CTNND1\n"
+      "[(0, 'ZZZ3'), (0, 'ZZEF1'), (0, 'ZYX')]\n",
+      "[]\n",
+      "Genes found\n"
      ]
     }
    ],
@@ -196,13 +193,172 @@
     "gene = genes()\n",
     "#print(l)\n",
     "\n",
-    "list = parse(driver,l,gene,3,16)\n",
+    "#list = parse(driver,l,gene,3,16)\n",
+    "list = parse_only_genes(driver,gene,0,16)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
     "    print(x)\n",
     "\n",
     "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "794d156b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### NEW METHOD THAT TAKES ONLY GENE LIST\n",
+    "\n",
+    "def parse_only_genes(driver,genes,target_frequency,num_claims):\n",
+    "    if target_frequency==0:\n",
+    "        target_frequency=1\n",
+    "    results = []\n",
+    "    count = [0]*len(genes)\n",
+    "    \n",
+    "    common_words = ['for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
+    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
+    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
+    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get',\\\n",
+    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just',\\\n",
+    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some',\\\n",
+    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only',\\\n",
+    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two',\\\n",
+    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want',\\\n",
+    "                    'because', 'any', 'these', 'give', 'day', 'most', 'us']\n",
+    "    \n",
+    "    #TITLE\n",
+    "    #titleStr = driver.find_element_by_id(\"title\").text\n",
+    "    titleStr = driver.title.split(\" - \")[1].strip()\n",
+    "    \n",
+    "    #print(titleStr)\n",
+    "    for cur in genes:\n",
+    "        if len(str(cur))>=3:\n",
+    "            #print(\"entered\")\n",
+    "            if str(cur) in titleStr:\n",
+    "                countTitle=(titleStr.count(\" \" + str(cur) + \" \")+titleStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                titleStr.count(\" \" + str(cur) + \",\")+titleStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                titleStr.count(\" \" + str(cur) + \"/\")+titleStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                titleStr.count(\" \" + str(cur) + \":\")+titleStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                if countTitle!=0:\n",
+    "                    results.append(cur)\n",
+    "                    count[genes.index(cur)]+=countTitle\n",
+    "                    print(\"Found in title: \"+cur)\n",
+    "                    break\n",
+    "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
+    "            elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
+    "                lower = str(cur).lower()\n",
+    "                countTitle=(titleStr.count(\" \" + lower + \" \")+titleStr.count(\" \" + lower + \".\")+\\\n",
+    "                titleStr.count(\" \" + lower + \",\")+titleStr.count(\" \" + lower + \"'\")+\\\n",
+    "                titleStr.count(\" \" + lower + \"/\")+titleStr.count(\"/\" + lower + \" \")+\\\n",
+    "                titleStr.count(\" \" + lower + \":\")+titleStr.count(\"-\" + lower + \" \"))\n",
+    "                if countTitle!=0:\n",
+    "                    results.append(cur)\n",
+    "                    count[genes.index(cur)]+=countTitle\n",
+    "                    print(\"Found in title (lowercase): \"+cur)\n",
+    "                    break\n",
+    "        \n",
+    "        \n",
+    "    #ABSTRACT\n",
+    "    abstractStr = driver.find_element_by_id(\"abstract\").text\n",
+    "\n",
+    "    if not abstractStr:\n",
+    "        abstractStr = driver.find_element_by_tag_name(\"patent-text\").text\n",
+    "    #print(abstractStr)\n",
+    "\n",
+    "    ## cur - the current gene that is being looked for in the text\n",
+    "    for cur in genes:\n",
+    "        #y=str(y).lower()\n",
+    "        if len(str(cur))>=3:\n",
+    "            #print(\"entered\")\n",
+    "            if str(cur) in abstractStr:\n",
+    "                countAbstract = 3*(abstractStr.count(\" \" + str(cur) + \" \")+abstractStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                abstractStr.count(\" \" + str(cur) + \",\")+abstractStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                abstractStr.count(\" \" + str(cur) + \"/\")+abstractStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                abstractStr.count(\" \" + str(cur) + \":\")+abstractStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                if countAbstract!=0:\n",
+    "                    count[genes.index(cur)]+=countAbstract\n",
+    "                    print(\"Found in abstract: \"+cur)\n",
+    "                #print(str(temp) + \" gene: \"+ str(y))\n",
+    "            elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
+    "                lower = str(cur).lower()\n",
+    "                countAbstract = 3*(abstractStr.count(\" \" + lower + \" \")+abstractStr.count(\" \" + lower + \".\")+\\\n",
+    "                abstractStr.count(\" \" + lower + \",\")+abstractStr.count(\" \" + lower + \"'\")+\\\n",
+    "                abstractStr.count(\" \" + lower + \"/\")+abstractStr.count(\"/\" + lower + \" \")+\\\n",
+    "                abstractStr.count(\" \" + lower + \":\")+abstractStr.count(\"-\" + lower + \" \"))\n",
+    "                if countAbstract!=0:\n",
+    "                    count[genes.index(cur)]+=countAbstract\n",
+    "                    print(\"Found in abstract (lowercase): \"+cur)\n",
+    "        \n",
+    "        \n",
+    "    #CLAIMS\n",
+    "    claimList=[]\n",
+    "    \n",
+    "    claims = driver.find_elements_by_class_name(\"claim-text\")\n",
+    "    count_claims = 0\n",
+    "    for x in claims:\n",
+    "        if count_claims>=num_claims:\n",
+    "            break\n",
+    "        claimList.append(x.text+\"\\n\")\n",
+    "        count_claims+=1\n",
+    "        \n",
+    "    #print(claimList)    \n",
+    "    claimStr = \"\"\n",
+    "    for x in claimList:\n",
+    "        claimStr+=x\n",
+    "\n",
+    "    #print(claimStr)\n",
+    "    for cur in genes:  \n",
+    "        if len(str(cur))>=3:\n",
+    "            #print(\"entered\")\n",
+    "            if str(cur) in claimStr:\n",
+    "                countClaim=claimStr.count(\" \" + str(cur) + \" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                claimStr.count(\" \" + str(cur) + \",\")+claimStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                claimStr.count(\" \" + str(cur) + \"/\")+claimStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                claimStr.count(\" \" + str(cur) + \":\")+claimStr.count(\"-\" + str(cur) + \" \")\n",
+    "                if countClaim!=0:\n",
+    "                    count[genes.index(cur)]+=countClaim\n",
+    "                    print(\"Found in claim: \"+cur)\n",
+    "            elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
+    "                lower = str(cur).lower()\n",
+    "                countClaim=claimStr.count(\" \" + lower + \" \")+claimStr.count(\" \" + lower + \".\")+\\\n",
+    "                claimStr.count(\" \" + lower + \",\")+claimStr.count(\" \" + lower + \"'\")+\\\n",
+    "                claimStr.count(\" \" + lower + \"/\")+claimStr.count(\"/\" + lower + \" \")+\\\n",
+    "                claimStr.count(\" \" + lower + \":\")+claimStr.count(\"-\" + lower + \" \")\n",
+    "                if countClaim!=0:\n",
+    "                    count[genes.index(cur)]+=countClaim\n",
+    "                    print(\"Found in claim (lowercase): \"+cur)\n",
+    "\n",
+    "    \n",
+    "    sort = sorted(zip(count, genes), reverse=True)\n",
+    "    count = 0\n",
+    "    r = []\n",
+    "    print_stuff=[]\n",
+    "    for x in sort:\n",
+    "        if count>=3:\n",
+    "            break\n",
+    "        elif x[1] not in results:\n",
+    "            r.append(x)\n",
+    "            print_stuff.append(x)\n",
+    "            count+=1\n",
+    "        elif x[1] in results:\n",
+    "            print_stuff.append(x)\n",
+    "\n",
+    "    for x in r:\n",
+    "        if int(x[0])>=target_frequency:\n",
+    "            print(x[1]+\" appended\")\n",
+    "            results.append(x[1])\n",
+    "        elif int(x[0]>0) and len(results)==0:\n",
+    "            results.append(x[1])\n",
+    "            break\n",
+    "\n",
+    "    print(print_stuff)\n",
+    "    print(results)\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
@@ -271,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f92bb52d",
+   "id": "7516300d",
    "metadata": {},
    "outputs": [],
    "source": []
