--- a/heck/ParsePatent.ipynb
+++ b/heck/ParsePatent.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "700c347f",
+   "execution_count": null,
+   "id": "4a7d9f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,17 @@
     "    results = []\n",
     "    count = [0] * len(alias_list)\n",
     "\n",
-    "    common_words = ['for', 'can', 'not', 'cell', 'step', 'protein']\n",
+    "    common_words = ['via','for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
+    "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
+    "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
+    "                    'there', 'their', 'what', 'so', 'up', 'out', 'if', 'about', 'who', 'get',\\\n",
+    "                    'which', 'go', 'me', 'when', 'make', 'can', 'like', 'time', 'no', 'just',\\\n",
+    "                    'him', 'know', 'take', 'people', 'into', 'year', 'your', 'good', 'some',\\\n",
+    "                    'could', 'them', 'see', 'other', 'than', 'then', 'now', 'look', 'only',\\\n",
+    "                    'come', 'its', 'over', 'think', 'also', 'back', 'after', 'use', 'two',\\\n",
+    "                    'how', 'our', 'work', 'first', 'well', 'way', 'even', 'new', 'want',\\\n",
+    "                    'because', 'any', 'these', 'give', 'day', 'most', 'us']\n",
     "\n",
     "    # TITLE\n",
     "    # titleStr = driver.find_element_by_id(\"title\").text\n",
@@ -26,19 +36,21 @@
     "                    countTitle = (titleStr.count(\" \" + str(cur) + \" \") + titleStr.count(\" \" + str(cur) + \".\") + \\\n",
     "                                  titleStr.count(\" \" + str(cur) + \",\") + titleStr.count(\" \" + str(cur) + \"'\") + \\\n",
     "                                  titleStr.count(\" \" + str(cur) + \"/\") + titleStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                                  titleStr.count(\" \" + str(cur) + \":\") + titleStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                                  titleStr.count(\" \" + str(cur) + \":\") + titleStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                  titleStr.count(\"(\" + str(cur) + \")\") + titleStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                    if countTitle != 0:\n",
     "                        results.append(aliases[0])\n",
     "                        count[alias_list.index(aliases)] += countTitle\n",
     "                        #print(\"Found in title: \" + aliases[0] + \" \" + cur)\n",
     "                        break\n",
     "                ## MAYBE ADD LENGTH RESTRICTION, len(str(cur))>5 and str(cur).lower() in titleStr\n",
-    "                elif str(cur).lower() in titleStr and str(cur).lower():\n",
+    "                elif str(cur).lower() in titleStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                                  titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
     "                                  titleStr.count(\" \" + lower + \"/\") + titleStr.count(\"/\" + lower + \" \") + \\\n",
-    "                                  titleStr.count(\" \" + lower + \":\") + titleStr.count(\"-\" + lower + \" \"))\n",
+    "                                  titleStr.count(\" \" + lower + \":\") + titleStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                  titleStr.count(\"(\" + lower + \")\") + titleStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                    if countTitle != 0:\n",
     "                        results.append(aliases[0])\n",
     "                        count[alias_list.index(aliases)] += countTitle\n",
@@ -60,21 +72,22 @@
     "            if len(str(cur)) >= 3:\n",
     "                # print(\"entered\")\n",
     "                if str(cur) in abstractStr:\n",
-    "                    countAbstract = 3 * (\n",
-    "                                abstractStr.count(\" \" + str(cur) + \" \") + abstractStr.count(\" \" + str(cur) + \".\") + \\\n",
-    "                                abstractStr.count(\" \" + str(cur) + \",\") + abstractStr.count(\" \" + str(cur) + \"'\") + \\\n",
-    "                                abstractStr.count(\" \" + str(cur) + \"/\") + abstractStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                                abstractStr.count(\" \" + str(cur) + \":\") + abstractStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                    countAbstract = 3 * (abstractStr.count(\" \" + str(cur) + \" \") + abstractStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                                        abstractStr.count(\" \" + str(cur) + \",\") + abstractStr.count(\" \" + str(cur) + \"'\") + \\\n",
+    "                                        abstractStr.count(\" \" + str(cur) + \"/\") + abstractStr.count(\"/\" + str(cur) + \" \") + \\\n",
+    "                                        abstractStr.count(\" \" + str(cur) + \":\") + abstractStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                        abstractStr.count(\"(\" + str(cur) + \")\") + abstractStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                    if countAbstract != 0:\n",
     "                        count[alias_list.index(aliases)] += countAbstract\n",
     "                        #print(\"Found in abstract: \" + aliases[0] + \" \" + cur)\n",
     "                    # print(str(temp) + \" gene: \"+ str(y))\n",
-    "                elif str(cur).lower() in abstractStr and str(cur).lower():\n",
+    "                elif str(cur).lower() in abstractStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
     "                    countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                         abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
     "                                         abstractStr.count(\" \" + lower + \"/\") + abstractStr.count(\"/\" + lower + \" \") + \\\n",
-    "                                         abstractStr.count(\" \" + lower + \":\") + abstractStr.count(\"-\" + lower + \" \"))\n",
+    "                                         abstractStr.count(\" \" + lower + \":\") + abstractStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                         abstractStr.count(\"(\" + lower + \")\") + abstractStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                    if countAbstract != 0:\n",
     "                        count[alias_list.index(aliases)] += countAbstract\n",
     "                        #print(\"Found in abstract (lowercase): \" + aliases[0] + \" \" + cur)\n",
@@ -101,19 +114,21 @@
     "            if len(str(cur)) >= 3:\n",
     "                # print(\"entered\")\n",
     "                if str(cur) in claimStr:\n",
-    "                    countClaim = claimStr.count(\" \" + str(cur) + \" \") + claimStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                    countClaim = (claimStr.count(\" \" + str(cur) + \" \") + claimStr.count(\" \" + str(cur) + \".\") + \\\n",
     "                                 claimStr.count(\" \" + str(cur) + \",\") + claimStr.count(\" \" + str(cur) + \"'\") + \\\n",
     "                                 claimStr.count(\" \" + str(cur) + \"/\") + claimStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                                 claimStr.count(\" \" + str(cur) + \":\") + claimStr.count(\"-\" + str(cur) + \" \")\n",
+    "                                 claimStr.count(\" \" + str(cur) + \":\") + claimStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                 claimStr.count(\"(\" + str(cur) + \")\") + claimStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                    if countClaim != 0:\n",
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim: \" + aliases[0] + \" \" + cur)\n",
-    "                elif str(cur).lower() in claimStr and str(cur).lower():\n",
+    "                elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                    lower = str(cur).lower()\n",
-    "                    countClaim = claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
+    "                    countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                                 claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
     "                                 claimStr.count(\" \" + lower + \"/\") + claimStr.count(\"/\" + lower + \" \") + \\\n",
-    "                                 claimStr.count(\" \" + lower + \":\") + claimStr.count(\"-\" + lower + \" \")\n",
+    "                                 claimStr.count(\" \" + lower + \":\") + claimStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                 claimStr.count(\"(\" + lower + \")\") + claimStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                    if countClaim != 0:\n",
     "                        count[alias_list.index(aliases)] += countClaim\n",
     "                        #print(\"Found in claim (lowercase): \" + aliases[0] + \" \" + cur)\n",
@@ -151,7 +166,7 @@
     "    results = []\n",
     "    count = [0] * len(genes)\n",
     "\n",
-    "    common_words = ['for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
+    "    common_words = ['via','for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
     "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with', \\\n",
     "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they', \\\n",
     "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would', \\\n",
@@ -175,7 +190,8 @@
     "                countTitle = (titleStr.count(\" \" + str(cur) + \" \") + titleStr.count(\" \" + str(cur) + \".\") + \\\n",
     "                              titleStr.count(\" \" + str(cur) + \",\") + titleStr.count(\" \" + str(cur) + \"'\") + \\\n",
     "                              titleStr.count(\" \" + str(cur) + \"/\") + titleStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                              titleStr.count(\" \" + str(cur) + \":\") + titleStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                              titleStr.count(\" \" + str(cur) + \":\") + titleStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                              titleStr.count(\"(\" + str(cur) + \")\") + titleStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                if countTitle != 0:\n",
     "                    results.append(cur)\n",
     "                    count[genes.index(cur)] += countTitle\n",
@@ -187,7 +203,8 @@
     "                countTitle = (titleStr.count(\" \" + lower + \" \") + titleStr.count(\" \" + lower + \".\") + \\\n",
     "                              titleStr.count(\" \" + lower + \",\") + titleStr.count(\" \" + lower + \"'\") + \\\n",
     "                              titleStr.count(\" \" + lower + \"/\") + titleStr.count(\"/\" + lower + \" \") + \\\n",
-    "                              titleStr.count(\" \" + lower + \":\") + titleStr.count(\"-\" + lower + \" \"))\n",
+    "                              titleStr.count(\" \" + lower + \":\") + titleStr.count(\"-\" + lower + \" \") + \\\n",
+    "                              titleStr.count(\"(\" + lower + \")\") + titleStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                if countTitle != 0:\n",
     "                    results.append(cur)\n",
     "                    count[genes.index(cur)] += countTitle\n",
@@ -210,7 +227,8 @@
     "                countAbstract = 3 * (abstractStr.count(\" \" + str(cur) + \" \") + abstractStr.count(\" \" + str(cur) + \".\") + \\\n",
     "                                     abstractStr.count(\" \" + str(cur) + \",\") + abstractStr.count(\" \" + str(cur) + \"'\") + \\\n",
     "                                     abstractStr.count(\" \" + str(cur) + \"/\") + abstractStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                                     abstractStr.count(\" \" + str(cur) + \":\") + abstractStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                                     abstractStr.count(\" \" + str(cur) + \":\") + abstractStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                                     abstractStr.count(\"(\" + str(cur) + \")\") + abstractStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                if countAbstract != 0:\n",
     "                    count[genes.index(cur)] += countAbstract\n",
     "                    #print(\"Found in abstract: \" + cur)\n",
@@ -220,7 +238,8 @@
     "                countAbstract = 3 * (abstractStr.count(\" \" + lower + \" \") + abstractStr.count(\" \" + lower + \".\") + \\\n",
     "                                     abstractStr.count(\" \" + lower + \",\") + abstractStr.count(\" \" + lower + \"'\") + \\\n",
     "                                     abstractStr.count(\" \" + lower + \"/\") + abstractStr.count(\"/\" + lower + \" \") + \\\n",
-    "                                     abstractStr.count(\" \" + lower + \":\") + abstractStr.count(\"-\" + lower + \" \"))\n",
+    "                                     abstractStr.count(\" \" + lower + \":\") + abstractStr.count(\"-\" + lower + \" \") + \\\n",
+    "                                     abstractStr.count(\"(\" + lower + \")\") + abstractStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                if countAbstract != 0:\n",
     "                    count[genes.index(cur)] += countAbstract\n",
     "                    #print(\"Found in abstract (lowercase): \" + cur)\n",
@@ -246,19 +265,21 @@
     "        if len(str(cur)) >= 3:\n",
     "            # print(\"entered\")\n",
     "            if str(cur) in claimStr:\n",
-    "                countClaim = claimStr.count(\" \" + str(cur) + \" \") + claimStr.count(\" \" + str(cur) + \".\") + \\\n",
+    "                countClaim = (claimStr.count(\" \" + str(cur) + \" \") + claimStr.count(\" \" + str(cur) + \".\") + \\\n",
     "                             claimStr.count(\" \" + str(cur) + \",\") + claimStr.count(\" \" + str(cur) + \"'\") + \\\n",
     "                             claimStr.count(\" \" + str(cur) + \"/\") + claimStr.count(\"/\" + str(cur) + \" \") + \\\n",
-    "                             claimStr.count(\" \" + str(cur) + \":\") + claimStr.count(\"-\" + str(cur) + \" \")\n",
+    "                             claimStr.count(\" \" + str(cur) + \":\") + claimStr.count(\"-\" + str(cur) + \" \") + \\\n",
+    "                             claimStr.count(\"(\" + str(cur) + \")\") + claimStr.count(\"\\\"\" + str(cur) + \"\\\"\"))\n",
     "                if countClaim != 0:\n",
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim: \" + cur)\n",
     "            elif str(cur).lower() in claimStr and str(cur).lower() not in common_words:\n",
     "                lower = str(cur).lower()\n",
-    "                countClaim = claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
+    "                countClaim = (claimStr.count(\" \" + lower + \" \") + claimStr.count(\" \" + lower + \".\") + \\\n",
     "                             claimStr.count(\" \" + lower + \",\") + claimStr.count(\" \" + lower + \"'\") + \\\n",
     "                             claimStr.count(\" \" + lower + \"/\") + claimStr.count(\"/\" + lower + \" \") + \\\n",
-    "                             claimStr.count(\" \" + lower + \":\") + claimStr.count(\"-\" + lower + \" \")\n",
+    "                             claimStr.count(\" \" + lower + \":\") + claimStr.count(\"-\" + lower + \" \") + \\\n",
+    "                             claimStr.count(\"(\" + lower + \")\") + claimStr.count(\"\\\"\" + lower + \"\\\"\"))\n",
     "                if countClaim != 0:\n",
     "                    count[genes.index(cur)] += countClaim\n",
     "                    #print(\"Found in claim (lowercase): \" + cur)\n",
@@ -290,21 +311,13 @@
     "\n",
     "    return results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8fe7981",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -316,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
