--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -11,7 +11,7 @@
     "    results = []\n",
     "    count = [0] * len(alias_list)\n",
     "\n",
-    "    common_words = ['via','for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
+    "    common_words = ['cap','via','for','can','not','cell','large','has','light','the', 'be', 'to', 'of',\\\n",
     "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with',\\\n",
     "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they',\\\n",
     "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would',\\\n",
@@ -217,7 +217,7 @@
     "    results = []\n",
     "    count = [0] * len(genes)\n",
     "\n",
-    "    common_words = ['via','for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
+    "    common_words = ['cap','via','for', 'can', 'not', 'cell', 'large', 'has', 'light', 'the', 'be', 'to', 'of', \\\n",
     "                    'and', 'a', 'in', 'that', 'have', 'I', 'it', 'for', 'not', 'on', 'with', \\\n",
     "                    'he', 'as', 'you', 'do', 'at', 'this', 'but', 'his', 'by', 'from', 'they', \\\n",
     "                    'we', 'say', 'her', 'she', 'or', 'an', 'will', 'my', 'one', 'all', 'would', \\\n",
